# analisis-gsc

./: .gitignore  README.md  canibalizacion_gsc.py  data_clean.py  date_manip.py  file_manip.py  get_gsc_properties.py  gsc_by_url.py  gsc_to_csv_by_month.py  gsc_with_filters.py  oauth.py  pyproject.toml  run_gsc.py
